--- a/modules/conceptual-models/partials/nav.adoc
+++ b/modules/conceptual-models/partials/nav.adoc
@@ -1,15 +1,13 @@
-** xref:modelleurs/index.adoc[]
-*** xref:modelleurs/basisregistraties.adoc[]
-*** xref:modelleurs/definities.adoc[]
-*** xref:modelleurs/drawio.adoc[]
-*** xref:modelleurs/github.adoc[]
-*** xref:modelleurs/linkml.adoc[]
-*** xref:modelleurs/naamgeving.adoc[]
-*** xref:modelleurs/modelleerproces.adoc[]
-*** xref:modelleurs/standaarden.adoc[]
-*** xref:modelleurs/tijdlijnen.adoc[]
-*** xref:modelleurs/verwante-methoden.adoc[]
-*** xref:modelleurs/regelgeving.adoc[]
-** xref:wegwijs.adoc[]
-** Modellen
-*** xref:im-aansluitingenregister:ontology:index.adoc[]
+* xref:conceptual-models:modelleurs/index.adoc[]
+** xref:conceptual-models:modelleurs/basisregistraties.adoc[]
+** xref:conceptual-models:modelleurs/definities.adoc[]
+** xref:conceptual-models:modelleurs/drawio.adoc[]
+** xref:conceptual-models:modelleurs/github.adoc[]
+** xref:conceptual-models:modelleurs/linkml.adoc[]
+** xref:conceptual-models:modelleurs/naamgeving.adoc[]
+** xref:conceptual-models:modelleurs/modelleerproces.adoc[]
+** xref:conceptual-models:modelleurs/standaarden.adoc[]
+** xref:conceptual-models:modelleurs/tijdlijnen.adoc[]
+** xref:conceptual-models:modelleurs/verwante-methoden.adoc[]
+** xref:conceptual-models:modelleurs/regelgeving.adoc[]
+* xref:conceptual-models:wegwijs.adoc[]
