More reuse and some fixing of refs

--- a/modules/projects/pages/controlled-vocabulary/index.adoc
+++ b/modules/projects/pages/controlled-vocabulary/index.adoc
@@ -16,35 +16,7 @@ Controlled vocabulary --> Term : hasPart
 ----
 
 .Types of controlled vocabularies
-[d2,format=svg,theme=5]
-----
-vars: {
-    d2-config: {
-        pad: 30
-    }
-}
-direction: up
-Code list --> Controlled vocabulary {
-    target-arrowhead: {
-        style.filled: false
-    }
-}
-Alignment --> Controlled vocabulary {
-    target-arrowhead: {
-        style.filled: false
-    }
-}
-Thesaurus --> Controlled vocabulary {
-    target-arrowhead: {
-        style.filled: false
-    }
-}
-Taxonomy --> Controlled vocabulary {
-    target-arrowhead: {
-        style.filled: false
-    }
-}
-----
+include::partial$controlled-vocabulary/diagram-types-vocabs.adoc[]
 
 == Identification
 
