--- a/modules/conceptual-models/partials/nav.adoc
+++ b/modules/conceptual-models/partials/nav.adoc
@@ -1,13 +1,13 @@
-* xref:conceptual-models:modelleurs/index.adoc[]
-** xref:conceptual-models:modelleurs/basisregistraties.adoc[]
-** xref:conceptual-models:modelleurs/definities.adoc[]
-** xref:conceptual-models:modelleurs/drawio.adoc[]
-** xref:conceptual-models:modelleurs/github.adoc[]
-** xref:conceptual-models:modelleurs/linkml.adoc[]
-** xref:conceptual-models:modelleurs/naamgeving.adoc[]
-** xref:conceptual-models:modelleurs/modelleerproces.adoc[]
-** xref:conceptual-models:modelleurs/standaarden.adoc[]
-** xref:conceptual-models:modelleurs/tijdlijnen.adoc[]
-** xref:conceptual-models:modelleurs/verwante-methoden.adoc[]
-** xref:conceptual-models:modelleurs/regelgeving.adoc[]
-* xref:conceptual-models:wegwijs.adoc[]
+** xref:conceptual-models:modelleurs/index.adoc[]
+*** xref:conceptual-models:modelleurs/basisregistraties.adoc[]
+*** xref:conceptual-models:modelleurs/definities.adoc[]
+*** xref:conceptual-models:modelleurs/drawio.adoc[]
+*** xref:conceptual-models:modelleurs/github.adoc[]
+*** xref:conceptual-models:modelleurs/linkml.adoc[]
+*** xref:conceptual-models:modelleurs/naamgeving.adoc[]
+*** xref:conceptual-models:modelleurs/modelleerproces.adoc[]
+*** xref:conceptual-models:modelleurs/standaarden.adoc[]
+*** xref:conceptual-models:modelleurs/tijdlijnen.adoc[]
+*** xref:conceptual-models:modelleurs/verwante-methoden.adoc[]
+*** xref:conceptual-models:modelleurs/regelgeving.adoc[]
+** xref:conceptual-models:wegwijs.adoc[]
