--- a/modules/projects/partials/controlled-vocabulary/diagram-types-vocabs.adoc
+++ b/modules/projects/partials/controlled-vocabulary/diagram-types-vocabs.adoc
@@ -1,8 +1,9 @@
-[d2,format=svg,theme=5]
+[d2,format=svg,theme=5,width=70%]
 ----
 vars: {
     d2-config: {
         pad: 30
+        center: true
     }
 }
 direction: up
