--- a/modules/projects/pages/application-profile/index.adoc
+++ b/modules/projects/pages/application-profile/index.adoc
@@ -5,7 +5,7 @@
 // #TODO#: This should be formalized in a model, and the diagram and glossary should be generated from that.
 
 .Informal conceptual model of a data product application profile
-[d2,format=svg,theme=5]
+[d2,format=svg,theme=5,width=70%]
 ----
 vars: {
     d2-config: {
