--- a/modules/projects/pages/documentation/index.adoc
+++ b/modules/projects/pages/documentation/index.adoc
@@ -2,16 +2,15 @@
 
 == Definition
 
-#Work in progress#.
-
 // #TODO#: This should be formalized in a model, and the diagram should be generated from that.
 
 .Types of documentation
-[d2,format=svg,theme=5]
+[d2,format=svg,theme=5,width=70%]
 ----
 vars: {
     d2-config: {
         pad: 30
+        center: true
     }
 }
 direction: up
