--- a/modules/projects/partials/controlled-vocabulary/uri-templates.adoc
+++ b/modules/projects/partials/controlled-vocabulary/uri-templates.adoc
@@ -1,17 +1,17 @@
-[cols="1,3"]
+[cols="h,3"]
 |===
 | Part | URI template
 
 | Controlled vocabulary
-| `\https://nbnl.info/\{vocabulary\}`
+| `\https://nbnl.info/\{vocabulary}`
 
 | Vocabulary term
-| `\https://nbnl.info/\{vocabulary\}/term/\{reference}`
+| `\https://nbnl.info/\{vocabulary}/term/\{reference}`
 
 |===
 
 where:
 
 [horizontal,labelwidth=25%]
-`\{vocabulary}`:: Path component -- possibly nested -- that identifies the vocabulary.
+`\{vocabulary}`:: Path component -- possibly nested -- that identifies the profile.
 `\{reference}`:: Local name of the resource.
