--- a/modules/projects/examples/nc13-core-equipment-uris.adoc
+++ b/modules/projects/examples/nc13-core-equipment-uris.adoc
@@ -4,7 +4,7 @@
 
 In this example, a nested namespace is used to group NC13 data products together.
 
-[cols="h,3"]
+[cols="1,3"]
 |===
 | Part | URI
 
